--- a/client/package.json
+++ b/client/package.json
@@ -32,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "formik": "^2.1.4"
   }
 }
